2005-10-11  Todd Dukes  <tdukes@freescale.com>

        - All 1.24.x versions will be for bigloo 2.7a
        
        * rnumber_to_string. Try to print the number instead of just "<rnumber>"
        * changed bigloo heap options for requirements of bigloo 2.7a 05Oct05 beta


        ===== rnumber release 1.23.4 (v1_23_4) on SunOS (cde-tx32-gb0002) =====

         rnumber release 1.23.4 (v1_23_4) on SunOS (tomato.somerset.sps.mot.com) 

        ===== rnumber release 1.23.4 (v1_23_4) on Linux (cde-tx32-ldt217) =====

        ====== rnumber release 1.23.3 (v1_23_3) on Linux (cde-tx32-lc210) ======

        ===== rnumber release 1.23.3 (v1_23_3) on SunOS (cde-tx32-gb0002) =====

        ===== rnumber release 1.23.3 (v1_23_3) on Linux (cde-tx32-ldt217) =====

        ===== rnumber release 1.23.3 (v1_23_3) on SunOS (cde-tx32-gb0002) =====

        ===== rnumber release 1.23.3 (v1_23_3) on Linux (cde-tx32-ldt217) =====

        ====== rnumber release 1.23.3 (v1_23_3) on Linux (cde-tx32-lc209) ======

2004-09-23  Todd Dukes  <Todd.Dukes@motorola.com>

        *  Fixed bug in bigloo rn-bitnot function.

         rnumber release 1.23.2 (v1_23_2) on SunOS (tomato.somerset.sps.mot.com) 

        ====== rnumber release 1.23.2 (v1_23_2) on Linux (cde-tx32-lc209) ======

        ===== rnumber release 1.23.2 (v1_23_2) on SunOS (cde-tx32-gb0002) =====

        ====== rnumber release 1.23.0 (v1_23_0) on Linux (cde-tx32-lc209) ======

        ===== rnumber release 1.23.0 (v1_23_0) on SunOS (cde-tx32-gb0001) =====

        ====== rnumber release 1.23.0 (v1_23_0) on Linux (cde-tx32-lc184) ======

        ====== rnumber release 1.23.0 (v1_23_0) on Linux (cde-tx32-lc207) ======

        ========= rnumber release 1.23.0 (v1_23_0) on Linux (petra20) =========

        ===== rnumber release 1.23.0 (v1_23_0) on SunOS (cde-tx32-gb0002) =====

         rnumber release 1.23.0 (v1_23_0) on SunOS (wynken.somerset.sps.mot.com) 
