@@ -72,13 +72,26 @@ AC_ARG_ENABLE(bigloo-bindings,
  BIGLOOBINDINGS=1
 )
 if test "x$BIGLOOBINDINGS" != x ; then
-        AC_PATH_PROG(BIGLOOPROG,bigloo)
-        if test "x$BIGLOOPROG" = x ; then
-        AC_WARN("Could not find bigloo. Check your path to make sure it is present.")
-           AC_WARN("Bigloo is available from http://www-sop.inria.fr/mimosa/fp/Bigloo/.")
-        AC_WARN("Bigloo bindings will *not* be built.")
-           BIGLOO=
-        else
+   dnl <find bigloo>
+   AC_PATH_PROG(BIGLOOPROG,bigloo)
+   if test "x$BIGLOOPROG" = x ; then
+      AC_ERROR("Could not find bigloo. Check your path to make sure it is present. Bigloo is available from http://www-sop.inria.fr/mimosa/fp/Bigloo/")
+   fi
+
+   BIGLOO_REVISION=`$BIGLOOPROG -revision`
+   AC_PATH_PROG(W_DOT_WHICH, w.which)
+   AC_MSG_RESULT([W_DOT_WHICH $W_DOT_WHICH])
+
+   if test "x$W_DOT_WHICH" != x; then
+      BIGLOOPROG=`w.which bigloo`
+   fi
+   AC_MSG_RESULT([BIGLOOPROG $BIGLOOPROG])
+   if test "x$BIGLOOPROG" = x ; then
+      AC_WARN("Could not find bigloo. Check your path to make sure it is present.")
+      AC_WARN("Bigloo is available from http://www-sop.inria.fr/mimosa/fp/Bigloo/.")
+      AC_WARN("Bigloo bindings will *not* be built.")
+      BIGLOO=
+   else
            BIGLOO=bigloo
            AC_MSG_RESULT([Bigloo Program:  $BIGLOOPROG])
            BIGLOO_BINDIR=`dirname $BIGLOOPROG`
@@ -177,6 +190,7 @@ CXXFLAGS="-Wall -g $CPPSETUP"
 AC_SUBST(PROFILE)
 AC_SUBST(ACLOCAL_FLAGS)
 AC_SUBST(CXXFLAGS)
+AC_SUBST(BIGLOO_REVISION)
 AC_SUBST(EXPLTEMPLATES)
 AC_PROG_INSTALL
 AC_STDC_HEADERS
