@@ -1,3 +1,7 @@
+2005-11-18  Todd Dukes  <tdukes@freescale.com>
+
+	* Changes for the 17Nov05 bigloo beta.
+
 2005-10-11  Todd Dukes  <tdukes@freescale.com>
 
         - All 1.24.x versions will be for bigloo 2.7a
